--- a/WebVisualizations/Data.html
+++ b/WebVisualizations/Data.html
@@ -47,7 +47,7 @@
       <div class="col-xs-12">
         <h1 class="description-header">Data</h1>
         <hr class="description-hr"/>
-        <p class="description-text">This table displays all of the data used to create my charts.</p>
+        <p class="description-text">This table displays all of the data used to create my plots.</p>
         <div class="table-responsive">
           <table border="1" class="dataframe table table-striped table-hover">
             <thead>
