--- a/WebVisualizations/Visualizations/Cloudiness.html
+++ b/WebVisualizations/Visualizations/Cloudiness.html
@@ -44,12 +44,23 @@
 
   <div class="container">
     <div class="row">
-      <div class="col" id="summary">
-        Summary: 
+      <div class="col">
+        <img src="..\assets\images\Cloudiness.png"
+            width="600"
+            height="500"
+            title= "Cloudiness">
       </div>
-      <div class="col-6" id="summary">
-        Visualizations:
+      <div class="col">
+        <br>
+        <br>
+
+        <p>This plot compares average Cloudiness per City.
+          <br>
+          We can see that at both Latitude extremes there is no cloud cover.
+        </p>
       </div>
+   
+    </div>
     </div>
 
 
