--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -53,8 +53,8 @@
         <br>
       </div>
         <div class="row">
-          <div class="col-8" id="paragraph">
-        <p>This Project analyzes various cities using the <a href="https://openweathermap.org/api" target="_blank">OpenWeatherMap API</a> 
+          <div class="col-8">
+        <p class= "intro">This Project analyzes various cities using the <a href="https://openweathermap.org/api" target="_blank">OpenWeatherMap API</a> 
           to see how weather changes as you near the Equator. I used the OpenWeatherMap API to gather data from 500 random cities. 
           I then used Python's Matplotlib to plot the data and visualize my findings. 
           I plotted the Temperature, Humidity, Cloudiness and Windspeed to meausre different factors.
@@ -62,13 +62,13 @@
           <br>
           <br>
 
-          Use the Plots menu to navigate through each chart. The Comparison page will display all charts, 
+          Use the Plots menu to navigate through each chart. The Comparison page will display all plots, 
           the Data page shows the dataset used.
         </p>
       </div>
   
       
-      <div class="row">
+      <div class="container">
           <div class="col" id="summary">
             Visualizations:
             <br>
