--- a/WebVisualizations/Visualizations/Humidity.html
+++ b/WebVisualizations/Visualizations/Humidity.html
@@ -44,12 +44,23 @@
 
   <div class="container">
     <div class="row">
-      <div class="col" id="summary">
-        Summary: 
+      <div class="col">
+        <img src="..\assets\images\Humidity.png"
+            width="700"
+            height="600"
+            title= "Humidity">
       </div>
-      <div class="col-6" id= "summary">
-        Visualizations:
+      <div class="col">
+        <br>
+        <br>
+
+        <p>This plot displays Humidity levels across different Latitudes.
+          <br>
+          We can more Humidity between -20 and 80 degrees Latitude.
+        </p>
       </div>
+   
+    </div>
     </div>
 
 
