--- a/WebVisualizations/Visualizations/MaxTemp.html
+++ b/WebVisualizations/Visualizations/MaxTemp.html
@@ -44,14 +44,24 @@
 
   <div class="container">
     <div class="row">
-      <div class="col" id="summary">
-        Summary: 
+      <div class="col">
+        <img src="..\assets\images\Max_Temp.png"
+            width="700"
+            height="600"
+            title= "Max Temperatures">
       </div>
-      <div class="col-6" id= "summary">
-        Visualizations:
-      </div>
-    </div>
+      <div class="col">
+        <br>
+        <br>
 
+        <p>This plot displays Maximum Temperatures over different Latitudes.
+          <br>
+          As we near the Equator (0 Degrees Latitude), temperatures begin to rise. The highest temperatures appear close to the Equator.
+        </p>
+      </div>
+   
+    </div>
+    </div>
 
 
 <!--SCRIPTS/ CDN's for jQuery, Popper and Boostrap JS-->
