--- a/WebVisualizations/Visualizations/Windspeed.html
+++ b/WebVisualizations/Visualizations/Windspeed.html
@@ -44,13 +44,25 @@
 
   <div class="container">
     <div class="row">
-      <div class="col" id="summary">
-        Summary:
+      <div class="col" id="image">
+      <img src="..\assets\images\Wind_Speed.png"
+            width="700"
+            height="600"
+            title= "Wind Speed">
       </div>
-      <div class="col-6" id= "summary">
-        Visualizations:
+      <div class="col">
+        <br>
+        <br>
+
+        <p>This plot displays Wind Speed over different Latitudes.
+          <br>
+          Wind Speed appears to be higher between 40 and 80 degrees Latitude.
+        </p>
       </div>
+   
     </div>
+    </div>
+     
 
 
 
