--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -73,7 +73,7 @@
             Visualizations:
             <br>
             <div class="container">        
-            <img src="assets\images\Max Temp.png"
+            <img src="assets\images\Max_Temp.png"
             width="500"
             height="400"
             title= "Max Temp">
