--- a/WebVisualizations/Comparisons.html
+++ b/WebVisualizations/Comparisons.html
@@ -53,7 +53,7 @@
 
       <div class="container">
     <a href="Visualizations/MaxTemp.html">            
-      <img src="assets\images\Max Temp.png"
+      <img src="assets\images\Max_Temp.png"
       width="500"
       height="400"
       title= "Max Temp">
