--- a/WebVisualizations/Visualizations/Cloudiness.html
+++ b/WebVisualizations/Visualizations/Cloudiness.html
@@ -46,15 +46,15 @@
     <div class="row">
       <div class="col">
         <img src="..\assets\images\Cloudiness.png"
-            width="600"
-            height="500"
+            width="700"
+            height="600"
             title= "Cloudiness">
       </div>
       <div class="col">
         <br>
         <br>
 
-        <p>This plot compares average Cloudiness per City.
+        <p>This plot displays Average Cloudiness over different Latitudes.
           <br>
           We can see that at both Latitude extremes there is no cloud cover.
         </p>
